--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>hello</h1>
-<form action="/cgi-bin/web.py" method="post">
+<form action="/cgi-bin/scriptName.py" method="post">
 	<input type="text" name="test">
 	<input type="submit" value="submit">
 </form>
